[RENTAL] Added updated rental service with all methods (#34)
* intermediate changes

* added changes, not finishedgit add .!

* dfdf

* Beta version of rental servise, getByUserIdAndActiveStatus is required

* fixed checkstyle issue

* added another method to RentalRepository

* implemented getByUserIdAndActiveStatus method